fix(input): add ellipsis for overflowed text

--- a/components/interactables/Input/Input.less
+++ b/components/interactables/Input/Input.less
@@ -34,4 +34,8 @@
   &.is-normal {
     height: 2.3rem;
   }
+
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
